--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
     <nav>
         <ul>
             
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="price.html">Price</a></li>
