--- a/contactus.html
+++ b/contactus.html
@@ -21,7 +21,7 @@
     <nav>
         <ul>
             
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="aboutus.html">About Us</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="price.html">Price</a></li>
