--- a/price.html
+++ b/price.html
@@ -15,7 +15,7 @@
 
  <header class="topnav">
         <h1>Star Tailors</h1>
-            <a href="0091 12345674"><p class="fa fa-phone">Tel: 0091 12345674</p></a>
+            <a href="tel:0091 12345674"><p class="fa fa-phone">Tel: 0091 12345674</p></a>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             
     <nav>
